--- a/minhas_financas/pubspec.yaml
+++ b/minhas_financas/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   shimmer: ^2.0.0
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
