--- a/minhas_financas/pubspec.yaml
+++ b/minhas_financas/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  shimmer: ^2.0.0
   flutter_colorpicker: ^1.0.3
+  shared_preferences: ^2.2.0
+  sqlite3: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
