--- a/minhas_financas/pubspec.yaml
+++ b/minhas_financas/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_colorpicker: ^1.0.3
+  path: ^1.8.3
   shared_preferences: ^2.2.0
-  sqlite3: ^2.0.0
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
